discussion/kv_engine/159084/159084_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Add logging to interesting NexusKVStore operations

Add logging to the NexusKVStore functions that we have already
implemented that do comparisons or interesting setup.

Change-Id: Ia50e1e407755b58037111a5cc5f6abd0b4f8b9e4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-08-11 09:34:00.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-11 09:43:52.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38505/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38505/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/873/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/866/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/866/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13028/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11951/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11951/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12834/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12834/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13386/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [0004/0093]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1540 Test failed: `" (Expected `10485760", got `20000000" - Flow Control Buffer Size not equal to min after threshold is hit)
[2021-08-11T09:42:11.978Z] (3732 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13386/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13386/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20933/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20933/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11232/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:165:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:248:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO("NexusKVStore::delVBucket: {} fileRev:{}", vbucket, fileRev);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:418:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO("NexusKVStore::prepareToCreate: {}:", vbid);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:425:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:462:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:477:5: error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
    EP_LOG_INFO("NexusKVStore::prepareToCreateImpl: {}:", vbid);
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11232/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:165:5:
error: use of undeclared identifier "EP_LOG_INFO" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11232/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32830/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:165:5:
error: use of undeclared identifier "EP_LOG_INFO"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32830/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9928/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
